--- a/templates/private/trips/trips.html.twig
+++ b/templates/private/trips/trips.html.twig
@@ -26,7 +26,7 @@
                         <div class="card-title d-flex flex-column mb-0">
                             <span class="fs-2hx fw-bold text-white me-2 mb-2 lh-1 ls-n2 {{ row.color }}">{{ row.value|number_format(2, ',', ' ') }}€</span>
                             <span class="text-gray-600 pt-1 fw-semibold fs-6">{{ row.key }}</span>
-                            <span class="text-gray-400 fw-semibold fs-6">Valor de opcionais comprados em conjunto estão incluídos</span>
+                            <span class="text-gray-400 fw-semibold fs-6">{{ row.desc }}</span>
                         </div>
                     </div>
                 </div>
