--- a/templates/private/optionals/optionals.html.twig
+++ b/templates/private/optionals/optionals.html.twig
@@ -30,7 +30,7 @@
                         <div class="card-title d-flex flex-column mb-0">
                             <span class="fs-2hx fw-bold text-white me-2 mb-2 lh-1 ls-n2 text-primary "><div id="soma_totais">0€</div></span>
                             <span class="text-gray-600 pt-1 fw-semibold fs-6"></span>
-                            <span class="text-gray-400 fw-semibold fs-6">somatorio da coluna total</span>
+                            <span class="text-gray-400 fw-semibold fs-6">Somatório de todos os opcionais.</span>
                         </div>
                     </div>
                 </div>
@@ -43,7 +43,7 @@
                         <div class="card-title d-flex flex-column mb-0">
                             <span class="fs-2hx fw-bold text-white me-2 mb-2 lh-1 ls-n2 text-success "><div id="soma_verdes">0€</div></span>
                             <span class="text-gray-600 pt-1 fw-semibold fs-6"></span>
-                            <span class="text-gray-400 fw-semibold fs-6">somatorio dos verdes da coluna total</span>
+                            <span class="text-gray-400 fw-semibold fs-6">Somatório de todos os pagamentos efetuados.</span>
                         </div>
                     </div>
                 </div>
@@ -55,7 +55,7 @@
                         <div class="card-title d-flex flex-column mb-0">
                             <span class="fs-2hx fw-bold text-white me-2 mb-2 lh-1 ls-n2 text-danger"><div id="soma_vermelhos">0€</div></span>
                             <span class="text-gray-600 pt-1 fw-semibold fs-6"></span>
-                            <span class="text-gray-400 fw-semibold fs-6">somatorio dos vermelhos da coluna total</span>
+                            <span class="text-gray-400 fw-semibold fs-6">Somatório de todos os pagamentos em falta.</span>
                         </div>
                     </div>
                 </div>
@@ -94,7 +94,7 @@
                         <span class="text-gray-400 mt-1 fw-semibold fs-6">Apenas opcionais</span>
                     </h3>
                     <div class="card-toolbar">
-                        {{ form_start(form) }}
+                        {{ form_start(form, { attr: { id: "frm"}} ) }}
                         <div class="d-flex flex-stack flex-wrap gap-4">
 
                             <div class="d-flex align-items-center fw-bold">
@@ -127,6 +127,19 @@
                                 </span>#}<span class="bi-search"></span>&nbsp;
                                 Filtrar
                             </button>
+                                
+                                
+                                   <button id="btn_reset" type="reset" class="btn btn-sm btn-flex h-40px py-2 bg-secondary btn-color-gray-700 btn-active-color-primary fw-bold">
+                                {#<span class="svg-icon svg-icon-6 svg-icon-muted me-1">
+                                    <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M19.0759 3H4.72777C3.95892 3 3.47768 3.83148 3.86067 4.49814L8.56967 12.6949C9.17923 13.7559 9.5 14.9582 9.5 16.1819V19.5072C9.5 20.2189 10.2223 20.7028 10.8805 20.432L13.8805 19.1977C14.2553 19.0435 14.5 18.6783 14.5 18.273V13.8372C14.5 12.8089 14.8171 11.8056 15.408 10.964L19.8943 4.57465C20.3596 3.912 19.8856 3 19.0759 3Z" fill="currentColor" />
+                                    </svg>
+                                </span>#}
+                                
+                                <span class="bi-trash"></span> &nbsp;
+                                Limpar
+                            </button>
+                                
                         </div>
                         {{ form_end(form) }}
                     </div>
@@ -252,6 +265,28 @@
 
 {% block javascripts %}
 
+        <script>
+
+
+        $(function () {
+            $("#btn_reset").click(function () {
+
+                $("#frm")[0].reset();
+                $("#form_product").trigger("change");
+                $("#form_school").trigger("change");
+                $("#form_status").trigger("change");
+
+{#                $("#frm")[0].reset();
+                $("#form_school").trigger("change");
+
+                $("#frm")[0].reset();
+                $("#form_status").trigger("change");#}
+            });
+        });
+
+
+
+    </script>
 
 
 {% endblock %}
