--- a/templates/private/optionals/optionals.html.twig
+++ b/templates/private/optionals/optionals.html.twig
@@ -76,8 +76,8 @@
                 <div class="card card-flush mb-4 mb-xl-8">
                     <div class="card-header p-5">
                         <div class="card-title d-flex flex-column">
-                            <span class="fs-2hx fw-bold text-white me-2 mb-2 lh-1 ls-n2 text-primary">{{ optional.value }} </span>
-                            <span class="fs-2hx fw-bold text-white me-2 mb-2 lh-1 ls-n2 text-primary"><div id="total_{{loop.index0}}"></div></span>
+                            <span class="fs-2hx fw-bold me-2 mb-2 lh-1 ls-n2" style="color: #535353">{{ optional.value }} </span>
+                            <span class="fs-2hx fw-bold me-2 mb-2 lh-1 ls-n2" style="color: #535353"><div id="total_{{loop.index0}}"></div></span>
                             <span class="text-gray-600 pt-1 fw-semibold fs-6">{{ optional.key|replace({'pa_': "", "-" : " "})}}</span>
                         </div>
                     </div>
