--- a/templates/pagamento_offline/index.html.twig
+++ b/templates/pagamento_offline/index.html.twig
@@ -5,7 +5,7 @@
 {% block stylesheets %}
 {% endblock %}
 
-{% block pageHeading %}List Pagamentos Offline{% endblock %}
+{% block pageHeading %}Pagamentos Offline{% endblock %}
 
 {% block pageBreadcrumb %}
 {% endblock %}
