--- a/templates/private/base.html.twig
+++ b/templates/private/base.html.twig
@@ -13,6 +13,24 @@
         <!--end::Global Stylesheets Bundle-->
         {% block stylesheets %}
         {% endblock %}
+        
+        
+        <style>
+            
+            
+           [data-kt-app-layout=dark-header] .app-header {
+    background-color: #0F8784;
+    border-bottom: 0!important;
+} 
+
+
+
+[data-kt-app-layout=dark-header] .app-header-menu .menu>.menu-item>.menu-link .menu-title {
+    color: #FFFFFF;
+}
+
+        </style> 
+        
     </head>
     <body id="kt_app_body" data-kt-app-layout="dark-header" data-kt-app-header-fixed="true" data-kt-app-toolbar-enabled="true" class="app-default">
         <script>var defaultThemeMode = "light";
@@ -47,30 +65,30 @@
                                 <div class="menu menu-rounded menu-column menu-lg-row my-5 my-lg-0 align-items-stretch fw-semibold px-2 px-lg-0" id="kt_app_header_menu" data-kt-menu="true">
                                     <div class="menu-item">
                                         <a class="menu-link" href="{{ path("page_trips") }}">
-                                            <span class="menu-title">Viagens</span>
+                                            <span class="menu-title">VIAGENS</span>
                                         </a>
                                     </div>
                                     <div class="menu-item">
                                         <a class="menu-link" href="{{ path("page_optionals") }}">
-                                            <span class="menu-title">Opcionais</span>
+                                            <span class="menu-title">OPCIONAIS</span>
                                         </a>
                                     </div>
                                     <div class="menu-item">
                                         <a class="menu-link" href="{{ path("page_statistics") }}">
-                                            <span class="menu-title">Resumo</span>
+                                            <span class="menu-title">RESUMO</span>
                                         </a>
                                     </div>
 
                                     <div class="menu-item">
                                         <a class="menu-link" href="{{ path("app_pagamento_offline_index") }}">
-                                            <span class="menu-title">Pagamentos Offline</span>
+                                            <span class="menu-title">PAGAMENTOS OFFLINE</span>
                                         </a>
                                     </div>
                                             
                                             
                                             <div class="menu-item">
                                         <a class="menu-link" href="{{ path("page_coupon") }}">
-                                            <span class="menu-title">Cupões</span>
+                                            <span class="menu-title">CUPÕES</span>
                                         </a>
                                     </div>
                                             
@@ -165,7 +183,7 @@
                                     </div>
                                 </div>
                                 <div class="app-navbar-item ms-1 ms-lg-3">
-                                    <a href="{{ path('app_logout') }}" class="menu-link px-5">Sair</a>
+                                    <a href="{{ path('app_logout') }}" class="menu-link px-5" style="color: #FFFFFF;">SAIR</a>
                                 </div>
                                 <div class="app-navbar-item d-lg-none ms-2 me-n3" title="Show header menu">
                                     <div class="btn btn-icon btn-active-color-primary w-35px h-35px" id="kt_app_header_menu_toggle">
