change color, update reset and remove 351

--- a/templates/private/base.html.twig
+++ b/templates/private/base.html.twig
@@ -15,7 +15,7 @@
         {% endblock %}
         
         
-        <style>
+{#        <style>
             
             
            [data-kt-app-layout=dark-header] .app-header {
@@ -29,7 +29,7 @@
     color: #FFFFFF;
 }
 
-        </style> 
+        </style> #}
         
     </head>
     <body id="kt_app_body" data-kt-app-layout="dark-header" data-kt-app-header-fixed="true" data-kt-app-toolbar-enabled="true" class="app-default">
