--- a/templates/pagamento_offline/_form.html.twig
+++ b/templates/pagamento_offline/_form.html.twig
@@ -7,45 +7,66 @@
         <div class="form-group">
             {{ form_label(form.numFile) }}:
             {{ form_widget(form.numFile, {'attr': {'class': 'form-control form-control-solid '}}) }}
-            {#<small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>#}
+            <span class="text-danger">  {{ form_errors(form.numFile) }}</span>
+
         </div>
+
         <div class="form-group">
             {{ form_label(form.cliente) }}:
             {{ form_widget(form.cliente, {'attr': {'class': 'form-control form-control-solid '}})  }}
+
+            <span class="text-danger">      {{ form_errors(form.cliente) }}</span>
+
         </div>
 
         <div class="form-group">
             {{ form_label(form.destino) }}:
             {{ form_widget(form.destino, {'attr': {'class': 'form-control form-control-solid '}})  }}
+
+            <span class="text-danger">     {{ form_errors(form.destino) }}</span>
+
         </div>
+
 
         <div class="form-group">
             {{ form_label(form.comercial) }}:
             {{ form_widget(form.comercial, {'attr': {'class': 'form-control form-control-solid '}})  }}
+
+            <span class="text-danger">    {{ form_errors(form.comercial) }}</span>
+
         </div>
     </div>
+
 
     <div class="col-md-6">
         <div class="form-group">
             {{ form_label(form.precoVenda) }}:
             {{ form_widget(form.precoVenda, {'attr': {'class': 'form-control form-control-solid '}})  }}
+
+            <span class="text-danger">    {{ form_errors(form.precoVenda) }} </span>
         </div>
 
 
         <div class="form-group">
             {{ form_label(form.valorPago) }}:
             {{ form_widget(form.valorPago, {'attr': {'class': 'form-control form-control-solid '}})  }}
-        </div> 
+            <span class="text-danger">   {{ form_errors(form.valorPago) }}</span>
+        </div>
+
 
         <div class="form-group">
             {{ form_label(form.valorPendente) }}:
             {{ form_widget(form.valorPendente, {'attr': {'class': 'form-control form-control-solid '}})  }}
-        </div>  
+            <span class="text-danger">    {{ form_errors(form.valorPendente) }}</span>
+        </div>
+
 
         <div class="form-group">
             {{ form_label(form.metodoPagamento) }}:
             {{ form_widget(form.metodoPagamento, {'attr': {'class': 'form-control form-control-solid '}})  }}
-        </div>  
+            <span class="text-danger">    {{ form_errors(form.metodoPagamento) }}</span>
+        </div>
+
 
     </div>
 </div>
